# curl-to-swagger

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  wsgi.py
.github/workflows/: python-app.yml
application/src/: wsgi.py
application/src/app/: application.py  modules.py
application/src/app/model/: model.py
application/src/app/resource/: curltoswagger_resources.py
application/src/app/service/: converter_service.py  services.py
application/src/config/: logo.txt
application/src/curl_to_swagger/: modules.py
application/src/curl_to_swagger/service/: converter_service.py
application/src/curl_to_swagger_api/: application.py  wsgi.py
application/src/curl_to_swagger_api/resource/: curltoswagger_resources.py
application/src/curl_to_swagger_core/: services.py
curl_to_swagger/: application.py  modules.py
curl_to_swagger/model/: model.py
curl_to_swagger/resource/: body.py  c2s.py  curltoswagger_resources.py  endpoint.py  header.py  url.py
curl_to_swagger/schema/: base_schema.py  body_schema.py  header_schema.py  url_schema.py
curl_to_swagger/service/: body_service.py  converter_service.py  header_service.py  services.py  swagger_service.py  url_service.py
tests/: test_body_service.py  test_url_service.py
tests/resource/: test_url.py
tests/service/: test_header_service.py  test_url_Service.py  test_url_service.py
