[tool.poetry]
name = "curl_to_swagger"
version = "0.1.0"
description = ""
authors = ["Nicola Mincuzzi <nicolamincuzzi88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
injector="^0.18.3"

marshmallow="^3.5.1"
python-dateutil="^2.8.1"
parse="^1.15.0"

Werkzeug="^1.0.1"
Flask-Injector="^0.12.3"
Flask="^1.1.2"
Flask-RESTful="^0.3.8"
webargs="^6.0.0"
gevent="^20.4.0"
gunicorn="^20.0.4"

pymongo="^3.10.1"

[tool.poetry.dev-dependencies]
pytest="6.2.2"
coverage="5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
